removing non-functioning warning portion

--- a/processes/02_data-formatting/04_rowbind-census-tibbles_2022-10-25.qmd
+++ b/processes/02_data-formatting/04_rowbind-census-tibbles_2022-10-25.qmd
@@ -178,10 +178,7 @@ rbind_warn <- function(x, y){
     expr = {rbind(x,y)},
     error = function(cnd){
       bad.names <- names(y)[!names(y) %in% names(x)]
-      warning("Rbind unsucessful in ",
-              str_c(unique(y[["nation"]]), unique(y[["diocese"]]), unique(y[["com"]]),
-                    sep = ":"),
-              "\nThe following names were not r-bindable:",
+      warning("\nThe following names were not r-bindable:",
               "\n* ", 
               str_c(bad.names, collapse = "\n* "),
               "\n------------------------------------------------------\n\n")
